--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>CodeQuest</h1>
-        <nav>
+        <nav>0
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#problems">Problems</a></li>
